--- a/index.html
+++ b/index.html
@@ -366,13 +366,13 @@
                     </p>
                     <div class="icons">
                         <div class="icon">
-                            <img src="img/Facebook.png" height="20px" alt="facebook">
+                            <img src="img/Facebook.png" height="20px" width="11px" alt="facebook">
                         </div>
                         <div class="icon">
-                            <img src="img/Instagram.png" height="15px" alt="instagram">
+                            <img src="img/Instagram.png" height="15px" width="16px" alt="instagram">
                         </div>
                         <div class="icon">
-                            <img src="img/Youtube.png" height="15px" alt="youtube">
+                            <img src="img/Youtube.png" height="15px" width="21px" alt="youtube">
                         </div>
                     </div>
                 </div>
